--- a/views/form.erb
+++ b/views/form.erb
@@ -19,10 +19,14 @@
   </header>
   <main>
     <div class="wrapper">
-      <% if defined?(pesan) && pesan && !pesan.empty? %>
+      <% if defined?(pesan_gagal) && pesan_gagal && !pesan_gagal.empty? %>
         <div class="alert alert-danger" id="errorMsg" style="display: block;">
-        <%= pesan %>
+        <%= pesan_gagal %>
         </div>
+      <% end %>
+      <% if defined?(pesan_sukses) && pesan_sukses && !pesan_sukses.empty?%>
+        <div class="alert alert-success" id="successMsg" style="display: block;">
+        <%= pesan_sukses %>
       <% end %>
 
       <form action="/register" method="post">
