--- a/views/form.erb
+++ b/views/form.erb
@@ -27,6 +27,7 @@
       <% if defined?(pesan_sukses) && pesan_sukses && !pesan_sukses.empty?%>
         <div class="alert alert-success" id="successMsg" style="display: block;">
         <%= pesan_sukses %>
+        </div>
       <% end %>
 
       <form action="/register" method="post">
