--- a/views/_input_field.erb
+++ b/views/_input_field.erb
@@ -1,3 +1,4 @@
+<%# menggunakan partials %>
 <%# views/_input_field.erb %>
 <div class="input-box">
   <input type="<%= type %>" name="<%= name %>" id="<%= name %>" placeholder="<%= placeholder %>" <%= defined?(required) && required ? 'required' : '' %>>
